--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,7 @@
   "name": "app_name",
   "dependencies": {
     "normalize-css": "3.0.1",
+
     "underscore": "1.6.0",
     "backbone": "1.1.2",
     "sugar": "1.4.1",
@@ -10,6 +11,8 @@
     "histo": "0.1.3",
     "ijax": "~0.1.0",
     "noted": "0.1.2",
+
+    "stacktrace-js": "0.6.2",
 
     "backbone-factory": "https://raw.githubusercontent.com/SupportBee/Backbone-Factory/ca14482bf13b4670128bc0291dd108fcc4cbeec0/public/javascripts/backbone-factory.js",
     "faker": "https://raw.githubusercontent.com/Marak/Faker.js/1bd1d73d29222c4e2f52d63a4282345b63a324df/Faker.js",
