--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,13 @@
 #   git config --global core.excludesfile '~/.gitignore_global'
 
 config/database.yml
+config/secrets.yml
 
 # Ignore bundler config.
 /.bundle
+
+# Deploy files
+/shared
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
