--- a/bower.json
+++ b/bower.json
@@ -7,10 +7,10 @@
     "backbone": "1.1.2",
     "sugar": "1.4.1",
     "URIjs": "1.13.2",
-    "frames": "~0.1.3",
+    "frames": "~>0.1.4",
     "histo": "0.1.3",
     "ijax": "~0.1.0",
-    "noted": "0.1.2",
+    "noted": "~>0.1.3",
 
     "stacktrace-js": "0.6.2",
 
