--- a/bower.json
+++ b/bower.json
@@ -13,6 +13,7 @@
     "noted": "~>0.1.3",
 
     "stacktrace-js": "0.6.2",
+    "jquery-autosize": "~>1.18.15",
 
     "backbone-factory": "https://raw.githubusercontent.com/SupportBee/Backbone-Factory/ca14482bf13b4670128bc0291dd108fcc4cbeec0/public/javascripts/backbone-factory.js",
     "faker": "https://raw.githubusercontent.com/Marak/Faker.js/1bd1d73d29222c4e2f52d63a4282345b63a324df/Faker.js",
