--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,7 @@ config/secrets.yml
 public/assets/*
 public/system/*
 public/uploads/*
+
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
