--- a/bower.json
+++ b/bower.json
@@ -19,6 +19,7 @@
 
     "jquery.cookie": "1.4.1",
     "jquery-placeholder": "2.1.0",
+    "jquery.browser": "0.0.6",
 
     "backbone-factory": "https://raw.githubusercontent.com/SupportBee/Backbone-Factory/ca14482bf13b4670128bc0291dd108fcc4cbeec0/public/javascripts/backbone-factory.js",
     "faker": "https://raw.githubusercontent.com/Marak/Faker.js/1bd1d73d29222c4e2f52d63a4282345b63a324df/Faker.js",
