--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ public/uploads/*
 config/settings.local.yml
 config/settings/*.local.yml
 config/environments/*.local.yml
+
+dp/password.txt
+
+.DS_Store
