--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,7 @@
     "jquery.browser": "0.0.6",
 
     "backbone-factory": "https://raw.githubusercontent.com/SupportBee/Backbone-Factory/ca14482bf13b4670128bc0291dd108fcc4cbeec0/public/javascripts/backbone-factory.js",
-    "faker": "https://raw.githubusercontent.com/Marak/Faker.js/1bd1d73d29222c4e2f52d63a4282345b63a324df/Faker.js",
+    "faker": "https://raw.githubusercontent.com/faker-js/faker/1bd1d73d29222c4e2f52d63a4282345b63a324df/Faker.js",
     "mock-async": "~>0.1.1"
   }
 }
