--- a/compose.yaml
+++ b/compose.yaml
@@ -28,32 +28,27 @@ services:
     # database data between container restarts. The `db-password` secret is used
     # to set the database password. You must create `db/password.txt` and add
     # a password of your choosing to it before running `docker compose up`.
-#     depends_on:
-#       db:
-#         condition: service_healthy
-#   db:
-#     image: postgres
-#     platform: linux/arm64
-#     restart: always
-#     user: postgres
-#     secrets:
-#       - db-password
-#     volumes:
-#       - db-data:/var/lib/postgresql/data
-#     environment:
-#       - POSTGRES_DB=coffee_dolphins_development
-#       - POSTGRES_PASSWORD_FILE=/run/secrets/db-password
-#     expose:
-#       - 5432
-#     healthcheck:
-#       test: [ "CMD", "pg_isready" ]
-#       interval: 10s
-#       timeout: 5s
-#       retries: 5
+    depends_on:
+      db:
+        condition: service_healthy
+  db:
+    image: postgres:11
+    restart: always
+    user: postgres
+    volumes:
+      - db-data:/var/lib/postgresql/data
+    environment:
+      - POSTGRES_DB=coffee_dolphins_development
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
+    expose:
+      - 5432
+    healthcheck:
+      test: [ "CMD", "pg_isready" ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 volumes:
   db-data:
   bundle_cache:
   js_cache:
-# secrets:
-#   db-password:
-#     file: db/password.txt
